feat: added seo support and small fix

--- a/example.env
+++ b/example.env
@@ -4,7 +4,11 @@ VITE_EMAIL=your.email@example.com
 VITE_RESUME=https://example.com/your_resume.pdf
 VITE_PROFESSION="Your Profession"
 VITE_DESCRIPTION="A short description about yourself, your skills, and interests."
+VITE_KEYWORDS="keyword1, keyword2"
 VITE_BLOG=https://blog.example.com/
+VITE_GTAGID="Google Analytics ID (Optional)",
+VITE_OG_IMAGE="image url",
+
 
 # Social and freelance links
 VITE_GITHUB=https://github.com/yourusername
